attempting to fix layout on mobile by adjusting grid scale

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,13 @@
 body {
   background-color:pink;
+  max-width:200x;
+  position:auto;
+ 
 }
 
   .container {
     display: grid;
-    max-width: 900px;
+    max-width: 1000px;
     position: relative;
     margin: auto;
     grid-gap: 10px;
